fixed positioning bug on manifesto fb share on mobile

--- a/less/new-responsive-767px-max.less
+++ b/less/new-responsive-767px-max.less
@@ -267,7 +267,7 @@
   }
 
   
-  // EXPLANATORY ILLUSTRATIONS
+  // INDEX PAGE
   
   .explanationTextCentered {
         max-width: 200px;
@@ -275,6 +275,11 @@
   
   .explanationTextCentered.lessWidth {
         max-width: 155px;
+  }
+  
+  .newPointCallTitle {
+    font-size:28px;
+    text-align:left;
   }
   
   // FULL TEXT PAGES
@@ -298,7 +303,7 @@
   }
   
   .explanationImageCentered {
-    margin-bottom:28px;
+    //margin-bottom:28px;
   }
 
 }
@@ -448,6 +453,12 @@
     padding-left:0;
   }
   
+    // INDEX PAGE
+  
+  .newPointCallTitle {
+    //font-size:28px;
+  }
+  
 }
 
 
@@ -507,6 +518,14 @@
     //bottom: -34px;
     //padding-left: 58px;
   }
+  
+  // INDEX PAGE
+  
+  .manifestoTitle {
+    padding-bottom: 27px;
+  }
+  
+  
   
 }
 
