--- a/less/new-responsive-768px-979px.less
+++ b/less/new-responsive-768px-979px.less
@@ -33,7 +33,8 @@
     // HOMEPAGE
 
     .explanationTextCentered {
-        max-width: 180px;
+        //max-width: 180px;
+        width: 724px;
     }
     
     .explanationTextCentered.lessWidth {
@@ -42,6 +43,7 @@
     
     .explanationBlock {
         margin-left: 18px;
+        //margin-right: 9px;
     }
 
 
